fix menu z-index in IE

--- a/app/assets/stylesheets/layouts/_mmenu_custom.sass
+++ b/app/assets/stylesheets/layouts/_mmenu_custom.sass
@@ -8,9 +8,13 @@ html.mm-right.mm-opening .mm-slideout
   -ms-transform: translate(-220px, 0)
   -o-transform: translate(-220px, 0)
   transform: translate(-220px, 0)
+
+#site-menu
+  z-index: 100
   
 #site-menu.mm-menu, #site-menu-bar.mm-menu       
   width: 50%
   min-width: 140px
   max-width: 220px
+
         
